# rust-axum-postgres-api

./: .env  Cargo.toml  Makefile  Note App.postman_collection.json  README.md  docker-compose.yml
migrations/: 20230330152240_init.down.sql  20230330152240_init.up.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
